src/index.css
@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Inline+Display:wght@100;300;400;500;600;700;800;900&family=Dosis:wght@500&display=swap');

body {
  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
  url("./tijolo.svg");
  background-color: black;
  background-size: cover;
  background-attachment: fixed;
  margin: 0;
  width: 100%;
  height: 100%;
  color: #fff;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  box-sizing: border-box;
}

#header {
  margin: 0 auto;
  text-align: center;
  max-width: 600px;
}

#logo {
  font-family: 'Big Shoulders Inline Display', cursive;
  font-weight: 900;
  text-shadow: 0 0 25px #fb0202;
  margin-bottom: 20px;
  font-size: 5rem;
}

.formContainer {
  margin-top: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

#form {
  margin: 0 auto;
  max-width: 1050px;
  height: 400px;
  text-align: center;
  display: flex;
  border-radius: 5px;
  overflow: hidden;
}

.formInfo {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 50%;
  height: 100%;
  background-color: rgba(237, 138, 10, 1);
}

.formContainer h1 {
  font-family: 'Dosis', sans-serif;
  font-weight: 500;
  font-size: 4rem;
  margin: 0;
}

.formInfo h2 {
  font-family: 'Dosis', sans-serif;
  font-weight: 500;
  font-size: 2rem;
  padding: 0 50px;
  margin: 10px;
}

.discount {
  font-family: 'Big Shoulders Inline Display', cursive;
  font-weight: 900;
  font-size: 2.5rem;
  text-shadow: 0 0 25px #fb0202;
}

.formInfo img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.formInput {
  display: flex;
  justify-content: center;
  flex-direction: column;
  width: 50%;
  height: 100%;
  background-color: rgba(48, 21, 81, 1);
  font-family: 'Dosis', sans-serif;
  font-weight: 500;
}

.formInput h2 {
  font-family: 'Dosis', sans-serif;
  font-weight: 500;
  font-size: 2rem;
  margin: 0;
  padding: 10px 50px;
}

#name, #email {
  background-color: transparent;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  border-bottom: 1px solid #ed8a0a;
  color: #FFF29C;
  font-family: 'Dosis', sans-serif;
  font-weight: 500;
  font-size: 1.5rem;
}

#name::placeholder, #email::placeholder {
  color: #FFF29C;
  font-family: 'Dosis', sans-serif;
  font-weight: 500;
}

#submit {
  border: none;
  background-color: orange;
  color: rgb(48, 21, 81);
  border-radius: 10px;
  width: 30%;
  padding: 10px 20px;
  font-family: 'Dosis', sans-serif;
}

#countdown {
  margin: 0 auto;
  max-width: 600px;
  text-align: center;
  font-size: 3rem;
  font-family: 'Dosis', sans-serif;
  padding-top: 10px;
}

.content {
  max-width: 1050px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  text-align: center;
}

.content h1 {
  font-family: 'Big Shoulders Inline Display', cursive;
  font-size: 3rem;
}

.cardsContainer {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.cardItem {
  width: 30%;
  background-color: #FFF29C;
  margin: 10px;
  transition: 0.2s;
  color: rgb(48, 21, 81);
  font-size: 1rem;
  font-weight: 500;
  font-family: 'Dosis', sans-serif;
}

.productTitle {
  font-size: 1.5rem;
}

.cardItem:hover {
  background-color: rgb(48, 21, 81);
  color: #FFF29C;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.imageContainer {
  height: 300px;
  width: auto;
}

.imageContainer img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

footer {
  margin-top: 40px;
  height: 60px;
  background-color: black;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: 999px) {
  #form {
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
    height: 600px;
    width: 90%;
  }

  .formInfo {
    width: 100%;
    height: 50%;
    font-size: 10px;
  }

  .formInput {
    width: 100%;
    height: 50%;
  }

  .formInfo h2, .discount, .formInput h2, #name, #email {
    font-size: 1.5rem;
  }
  
  .formInfo img {
    object-fit: contain;
  }

  .cardItem {
    width: 320px;
  }

  .cardsContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 0 auto;
  }
}

@media (max-width: 563px) {
  .cardItem {
    width: 90%;
  }

  #logo {
    font-size: 3rem;
  }

  .formContainer h1 {
    font-size: 3rem;
  }

  #countdown {
    font-size: 2rem;
  }
}

